# C1-Chat-Demo

.github/workflows/: deploy-be.yml  deploy-fe.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.py
frontend/: .gitignore  Dockerfile  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
